# prodigy-replica

./: disc.md  edit-suggestions.md  example.tex  milestone.tex  present.tex  proj.md  proofs.tex  proposal.tex  ref.bib  report.tex
impl/: example.sage  inv  main.py  pyproject.toml  result  runtime  simulate.py  test.fish  test1.pgcl  test2.pgcl
impl/examples/: nested_while_spec.pgcl  sequential_loops_spec.pgcl  uniform_sampling.pgcl
impl/examples/equivalence/: bit_flip_conditioning.pgcl  bit_flip_conditioning_generalized_parameter.pgcl  bit_flip_conditioning_generalized_parameter_invariant.pgcl  bit_flip_conditioning_invariant.pgcl  bit_flip_conditioning_parameter_invariant.pgcl  dep_bern_invariant.pgcl  geometric_observe_parameter_invariant.pgcl  geometric_parameter.pgcl  geometric_shifted.pgcl  geometric_shifted_invariant.pgcl  ky_die_parameter.pgcl  skip_rejection_sampling.pgcl
impl/impl/: semantics.py  simulation.py
impl/simulation-results/: comp-bin.py  compbindata.py  ky-die.py  kydata.py
